[package]
name = "decks"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
futures = "0.3"
